# lazyaider

./: .gitignore  README.md  lazyaider.py  lazyaider_main.py  plan_generator.py  pyproject.toml  requirements.txt  shell_app.py  tm4aider.py
lazyaider/: config.py  feature_input_app.py  feature_input_app.tcss  llm_planner.py  plan_generator.py  prompt.py  section_editor.py  session_selector.py  sidebar.py  sidebar.tcss  tmux_sidebar.py  tmux_utils.py  venv_utils.py
tm4aider/: __init__.py  aider_utils.py  app.py  config.py  feature_input_app.py  feature_input_app.tcss  llm_planner.py  prompt.py  section_editor.py  session_selector.py  session_selector.tcss  sidebar.py  tmux_sidebar.py  tmux_utils.py
